# battle-ship

./: .gitignore
client/: Cargo.toml
client/src/: game.rs  lib.rs  main.rs  player.rs  screen.rs
console/: Cargo.toml
console/src/: main.rs
service/: Cargo.toml
service/src/: main.rs
